--- a/Riskvalve/appsettings.json
+++ b/Riskvalve/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=Riskvalve;User Id=SA;Password=DB_Password;Encrypt=false"
+  },
   "AllowedHosts": "*"
 }
 
