--- a/Riskvalve/appsettings.json
+++ b/Riskvalve/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1,1433;Database=Riskvalve;User Id=SA;Password=DB_Password;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
+  }
 }
 
