--- a/Riskvalve/appsettings.Development.json
+++ b/Riskvalve/appsettings.Development.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=Riskvalve;User Id=SA;Password=DB_Password;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
-    "ServerConnection": "Server=147.139.208.222,1533;Database=vims_20240605;User Id=user_vims;Password=we514YQ;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
-    "ServerConnection2": "Server=103.160.62.196,1433;Database=vims_20240605;User Id=vims_uxer;Password=4F9yWi83;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
+    "LocalConnection": "Server=127.0.0.1,1433;Database=Riskvalve;User Id=SA;Password=DB_Password;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
+    "OldConnection": "Server=147.139.208.222,1533;Database=vims_20240605;User Id=user_vims;Password=we514YQ;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
+    "DefaultConnection": "Server=103.160.62.196,1433;Database=vims_20240605;User Id=vims_uxer;Password=4F9yWi83;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
