--- a/Riskvalve/appsettings.json
+++ b/Riskvalve/appsettings.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "LocalConnection": "Server=127.0.0.1,1433;Database=Riskvalve;User Id=SA;Password=DB_Password;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
+    "LocalConnection2": "Server=127.0.0.1,1433;Database=Riskvalve2;User Id=SA;Password=DB_Password;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
     "OldConnection": "Server=147.139.208.222,1533;Database=vims_20240605;User Id=user_vims;Password=we514YQ;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;",
     "DefaultConnection": "Server=103.160.62.196,1433;Database=vims_20240605;User Id=vims_uxer;Password=4F9yWi83;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   },
