--- a/Riskvalve/web.config
+++ b/Riskvalve/web.config
@@ -1,12 +1,12 @@
 <configuration>
-  <system.webServer>
-    <rewrite>
-      <outboundRules>
-        <rule name="RemoveServerHeader">
-          <match serverVariable="RESPONSE_SERVER" pattern=".+" />
-          <action type="Rewrite" value="" />
-        </rule>
-      </outboundRules>
-    </rewrite>
-  </system.webServer>
+    <system.webServer>
+        <security>
+            <requestFiltering removeServerHeader="true" />
+        </security>
+        <httpProtocol>
+            <customHeaders>
+                <remove name="Server" />
+            </customHeaders>
+        </httpProtocol>
+    </system.webServer>
 </configuration>
